# InventoryAnalysis

./: EXECUTIVE_SUMMARY.md  PRESENTATION.md  README.md  analysis.ipynb  inventory_management.xlsx  pyproject.toml  requirements.txt
outputs/: cfo_summary.json  channel_performance.csv  data_quality.json  dead_inventory.csv  findings.json  ops_triage.json  reconciliation_gaps.csv  stockout_risk.csv
retail_reconcile/: __init__.py  ai_insights.py  config.py  insights.py  loaders.py  normalize.py  reconcile.py
